<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="enter_height">Enter Height [cm]</string>
    <string name="enter_weight">Enter Weight [kg]</string>
    <string name="total">BMI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bmi">BMI:</string>
    <string name="enter_age">Enter age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bmr">BMR:</string>
    <string name="recipe_1">Slice mozzarella cheese into eight rounds about 1/2 in. thick. Place flour in first shallow dish. Lightly beat egg in second dish. Combine pecans, Parmesan cheese and bread crumbs in third dish. Lightly dredge each mozzarella round in flour, shaking off excess; dip into egg and then into pecan mixture, coating evenly.

2. Add oil to 10-in non-stick Skillet (do not use stainless cookware); heat over medium heat 1-3 minutes or until shimmering. Cook mozzarella rounds 1-2 minutes on each side or until coating is golden brown and cheese begins to soften around edges.

3. Add vinaigrette and mustard to Small Bowl; whisk until well blended. Cut tomatoes in half lengthwise. Divide mixed greens and tomatoes among serving plates; drizzle with vinaigrette and top with mozzarella rounds.</string>
    <string name="recipe_2">Place all ingredients in a large pot and bring to a boil. Reduce heat and simmer, partially covered, for 30 minutes. Strain and serve warm.

Notes on juices and sweeteners:
• I prefer to use an unsweetened cranberry juice blend and unsweetened apple cider/juice and to sweeten the drink with honey (or not at all). Whether you sweeten it will depend on personal preference and the juices you use. If using sweetener, start with a couple tablespoons and increase as desired.
• If using pure unsweetened cranberry juice (instead of a juice blend), reduce the amount to 2 cups and increase the apple cider/juice to 6 cups.</string>
    <string name="question">Question</string>
    <string name="answer_a">A</string>
    <string name="answer_b">B</string>
    <string name="answer_c">C</string>
    <string name="quiz_score">Zdobyłeś %1$d/%2$d punktów!</string>
</resources>
