<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.QuizFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/question"
            android:textSize="24sp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/answer_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_a"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/answer_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_b"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/answer_button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_c"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</FrameLayout>