<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16DD83"
    tools:context=".BMIFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_height"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/weightEditText"
            android:hint="@string/enter_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_marginTop="10pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi" />
            <TextView
                android:id="@+id/bmiTextView"
                android:layout_marginTop="10pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>